updated html documentation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>OP Anime Characters API</h1>
-    <p>https://op-anime-characters-api.herokuapp.com/api/OP-Character-Name</p>
+    <p>Please use https://op-anime-characters-api.herokuapp.com/api/OP-Character-Name</p>
 </body>
 </html>
